src/test/ui/borrowck/borrowck-in-static.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-in-static.rs:15:17
   |
LL |     Box::new(|| x) //~ ERROR cannot move out of captured outer variable
   |                 ^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
